ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_04_12.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-palm-sunday\", \"dominica-of-passiontide\"]"
expression: s.0
---
2025-04-12
First Vespers of Dominica Palm Sunday:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
