ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_04_13.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-palm-sunday\", \"dominica-of-holy-week\"]"
expression: s.0
---
2025-04-13
Second Vespers of Dominica Palm Sunday:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
