ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_04_17.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-v-of-holy-week\", \"feria-of-holy-week\"]"
expression: s.0
---
2025-04-17
Vespers of Feria V of Holy Week:
Vespers:
  Antiphons:   Psalter (Ordinary of Holy Week)
  Psalms:      Psalter
  Chapter:     Psalter (Ordinary of Holy Week)
  Hymn:        Psalter (Ordinary of Holy Week)
  Verse:       Psalter (Ordinary of Holy Week)
  Magnificat:  Psalter (Ordinary of Holy Week)
  Collect:     of Sunday
