ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_04_20.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"easter-sunday\", \"dominica-of-eastertide\"]"
expression: s.0
---
2025-04-20
Second Vespers of Easter Sunday:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
