ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_04_21.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"day-2-in-the-octave-of-easter\", \"octave-of-easter\"]"
expression: s.0
---
2025-04-21
Second Vespers of Day 2 in the Octave of Easter:
Vespers:
  Antiphons:   Common
  Psalms:      Common
  Chapter:     Common
  Hymn:        Common
  Verse:       Common
  Magnificat:  Common
  Collect:     Proper
